--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1241,7 +1241,7 @@ input.checked[type="radio"] {
 
 /* Hero Banners */
 
-.hero-banners {
+.view-wrapper {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -1252,6 +1252,7 @@ input.checked[type="radio"] {
   width: 100%;
   border-radius: 0.1rem;
   overflow: hidden;
+  backface-visibility: hidden !important;
   /*box-shadow: 0px 0px 10px 0px #00000020;*/
 }
 
@@ -1296,6 +1297,7 @@ input.checked[type="radio"] {
   width: 100%;
   height: 100%;
   transition: height 0.3s ease-in-out;
+  backface-visibility: hidden !important;
 }
 
 .slideBox-wrapper::-webkit-scrollbar,
@@ -4797,14 +4799,12 @@ button[disabled]:hover {
   background-color: inherit;
   align-items: center;
   justify-content: space-between;
-  padding: 1rem;
-  border-radius: 0.5rem;
   min-height: fit-content;
+  z-index: 1;
 }
 
 .classic-title {
   min-width: fit-content;
-  background-color: inherit;
   z-index: 1;
   margin-right: 2rem;
 }
