--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=MuseoModerno:wght@300;400;500;600;700&display=swap");
-@import "../node_modules/swiper/css/swiper.css";
-@import "../node_modules/swiper/css/swiper.min.css";
+/*@import "../node_modules/swiper/css/swiper.css";
+@import "../node_modules/swiper/css/swiper.min.css";*/
 @import "../node_modules/font-awesome/css/font-awesome.css";
 @import "../node_modules/mapbox-gl/dist/mapbox-gl.css";
 @import "../node_modules/mapbox-gl-geocoder/dist/mapbox-gl-geocoder.css";
