--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -442,6 +442,7 @@ textarea {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  height: 100%;
 }
 
 .product-nameEn {
@@ -473,6 +474,14 @@ textarea {
   font-weight: 500;
   color: #505050;
   padding: 0 0.5rem;
+}
+
+.product-det-price-reviews-cont {
+  display: flex;
+  justify-content: space-between;
+  align-content: center;
+  flex-direction: column;
+  height: 100%;
 }
 
 .product-det-price-reviews-wrap {
@@ -1597,110 +1606,6 @@ input.checked[type="radio"] {
 
 .place-order-table {
   margin-bottom: 1rem;
-}
-
-/* Add to cart button */
-
-.add-to-cart-btns {
-  display: flex;
-  align-items: center;
-  margin: 0;
-}
-.product-add-to-cart {
-  margin-top: 1rem;
-  margin-bottom: 1rem;
-}
-.add-to-cart-btn {
-  padding: 0.8rem 2rem 0.8rem 2rem;
-  background-color: #f0c040;
-  border: 0;
-  border-radius: 2.5rem;
-  color: white;
-  font-size: 1.3rem;
-  margin-bottom: 1rem;
-}
-
-.minus,
-.plus {
-  padding: 0.72rem 1.5rem 0.72rem 1.5rem;
-  background-color: #f0c040;
-  border: 0;
-  border-radius: 0.5rem;
-  color: white;
-}
-
-.add-to-cart-qty {
-  text-align: center;
-  padding: 0.5rem 0;
-  width: 4rem;
-  margin: 0;
-}
-
-.add-to-cart-qty,
-.add-to-cart-btn,
-.minus,
-.plus {
-  margin: 1rem 0;
-}
-
-.minus:hover,
-.plus:hover,
-.add-to-cart-btn:hover {
-  background-color: #c8960b;
-}
-
-.hide {
-  display: none;
-}
-
-.qty-cart {
-  width: 4rem;
-  height: 1rem;
-}
-
-@media screen and (max-width: 700px) {
-  .cart-btns {
-    margin-right: 0rem;
-  }
-}
-
-@media screen and (min-width: 700px) {
-  .add-to-cart-btn {
-    padding: 1.14rem 4rem 1.14rem 4rem;
-    font-size: 1.5rem;
-    margin: 0;
-  }
-
-  .qty-cart {
-    width: 6rem;
-  }
-
-  .minus,
-  .plus {
-    padding: 1.2rem 2rem 1.2rem 2rem;
-  }
-
-  .add-to-cart-qty {
-    font-size: 1.8rem;
-    width: 6rem;
-  }
-  .add-to-cart-qty,
-  .minus,
-  .plus {
-    margin: 0;
-  }
-}
-
-@media screen and (max-width: 700px) {
-  .product-add-to-cart {
-    margin: 0;
-  }
-}
-
-.float-bottom {
-  margin: 0;
-  padding: 0.5rem 0;
-  width: auto;
 }
 
 /* Cart lvl.2 */
@@ -4012,71 +3917,6 @@ button[disabled]:hover {
   }
 }
 
-.add-to-cart-btn {
-  cursor: pointer;
-}
-
-.product-add-to-cart {
-  position: relative;
-}
-
-.show-qty {
-  animation-name: show-qty;
-  animation-duration: 0.2s;
-  animation-fill-mode: forwards;
-}
-.show-plus {
-  animation-name: show-plus;
-  animation-duration: 0.2s;
-  animation-fill-mode: forwards;
-}
-
-@keyframes show-qty {
-  from {
-    margin-left: -5rem;
-  }
-  to {
-    margin-left: 0;
-  }
-}
-
-@keyframes show-plus {
-  from {
-    margin-left: -11rem;
-  }
-  to {
-    margin-left: 0;
-  }
-}
-
-.pulse-add-to-cart {
-  transition: all 0.2s ease-in-out;
-  animation-name: pulse-add-to-cart;
-  animation-duration: 0.2s;
-  animation-fill-mode: forwards;
-}
-
-@keyframes pulse-add-to-cart {
-  0% {
-    transform: scale(0);
-  }
-  50% {
-    transform: scale(1.1);
-  }
-  100% {
-    transform: scale(1);
-  }
-}
-
-.farUser {
-  color: #ffffff;
-  margin-left: 1rem;
-}
-
-.farUser:hover {
-  color: #ff8000;
-}
-
 /* top-Ribbon Container */
 .top-ribbon-overlay {
   display: flex;
@@ -4900,4 +4740,84 @@ button[disabled]:hover {
 
 .home-page-views {
   display: none;
+}
+
+/* Add to cart button */
+.add-to-cart-btns-wrap {
+  position: relative;
+  padding: 1rem 0;
+  text-align: center;
+}
+
+.add-to-cart-btn {
+  cursor: pointer;
+  height: 4.2rem;
+  width: 14rem;
+  background-color: #f0c040;
+  border: 0;
+  border-radius: 0.5rem;
+  color: white;
+  font-size: 1.5rem;
+  font-weight: 600;
+  transition: all 0.3s ease;
+}
+
+.add-to-cart-btns {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.minus,
+.plus {
+  cursor: pointer;
+  height: 4.2rem;
+  width: 4.7rem;
+  background-color: #f0c040;
+  border-radius: 0.5rem;
+  color: #fff;
+  border: 0;
+}
+
+.add-to-cart-qty {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.7rem;
+  height: 4.2rem;
+  width: 4.7rem;
+  margin: 0 0.2rem;
+}
+
+.minus:hover,
+.plus:hover,
+.add-to-cart-btn:hover {
+  background-color: #c8960b;
+  /*box-shadow: 0px 0px 10px 1px #92929252;*/
+}
+
+.hide {
+  display: none;
+}
+
+/*.qty-cart {
+  width: 4rem;
+  height: 1rem;
+}*/
+
+/*.float-bottom {
+  margin: 0;
+  padding: 0.5rem 0;
+  width: auto;
+}*/
+
+/*///////////////////////////////////*/
+
+.farUser {
+  color: #ffffff;
+  margin-left: 1rem;
+}
+
+.farUser:hover {
+  color: #ff8000;
 }
