--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -10,13 +10,14 @@
 @import "../node_modules/flat-icons/technology.css";
 @import "../node_modules/flat-icons/creative.css";
 @import url("https://fonts.googleapis.com/css2?family=Caveat:wght@400;500;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap");
 
 * {
   outline: none;
   text-decoration: none;
   box-sizing: border-box;
-  font-family: "MuseoModerno", cursive;
-  /*font-family: "Baloo Chettan 2", cursive;*/
+  /*font-family: "MuseoModerno", cursive;*/
+  font-family: "Lexend Deca", sans-serif;
   font-weight: 400;
   /*caret-color: transparent;*/
 }
@@ -1450,6 +1451,7 @@ input.checked[type="radio"] {
 .slides-overlay {
   flex-direction: column;
   position: relative;
+  transition: all 0.5s !important;
 }
 
 .flex-slides-wrapper {
@@ -1461,7 +1463,8 @@ input.checked[type="radio"] {
   justify-content: center;
   transition: height 0.3s ease-in-out;
   position: relative;
-  height: fit-content;
+  height: auto;
+  width: 100%;
 }
 
 .fixed-slides-wrapper {
@@ -4648,6 +4651,10 @@ button[disabled]:hover {
 
 .title-text {
   cursor: pointer;
+  overflow: hidden;
+  display: inline-block;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .title-border {
