--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,6 +1,4 @@
 @import url("https://fonts.googleapis.com/css2?family=MuseoModerno:wght@300;400;500;600;700&display=swap");
-/*@import "../node_modules/swiper/css/swiper.css";
-@import "../node_modules/swiper/css/swiper.min.css";*/
 @import "../node_modules/font-awesome/css/font-awesome.css";
 @import "../node_modules/mapbox-gl/dist/mapbox-gl.css";
 @import "../node_modules/mapbox-gl-geocoder/dist/mapbox-gl-geocoder.css";
@@ -11,6 +9,7 @@
 @import "../node_modules/flat-icons/creative.css";
 @import url("https://fonts.googleapis.com/css2?family=Caveat:wght@400;500;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap");
+@import url("https://cdn.onlinewebfonts.com//svg_info/packs/web/b2/3165/icon.css");
 
 * {
   outline: none;
@@ -33,20 +32,46 @@ html {
 body {
   font: 1.6rem Helvetica;
   margin: 0;
-  max-width: 100vw;
+  overflow-x: hidden;
 }
 
-body::-webkit-scrollbar {
-  width: 0px;
+*::-webkit-scrollbar {
+  width: 12px;
+  background-color: #f9f9f9;
+}
+
+*::-webkit-scrollbar-track {
+  background: #f9f9f9;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #999999; /* color of the scroll thumb */
+  border: 3px solid #f9f9f9; /* creates padding around scroll thumb */
+}
+
+*::-webkit-scrollbar-thumb:active {
+  background-color: rgb(182, 35, 35); /* color of the scroll thumb */
+}
+
+@media screen and (max-width: 700px) {
+  *::-webkit-scrollbar {
+    width: auto;
+    background-color: auto;
+  }
+
+  *::-webkit-scrollbar-track {
+    background: auto;
+  }
+
+  *::-webkit-scrollbar-thumb {
+    background-color: auto; /* color of the scroll thumb */
+    border-radius: auto; /* roundness of the scroll thumb */
+    border: auto; /* creates padding around scroll thumb */
+  }
 }
 
 select {
   cursor: pointer;
-}
-
-body::-webkit-scrollbar-thumb:horizontal {
-  background-color: rgba(87, 87, 87, 0.466);
-  border-radius: 5rem;
 }
 
 textarea {
@@ -75,7 +100,6 @@ textarea {
   grid-template-rows: 5rem 1fr 5rem;
   min-height: 100vh;
   font-size: 1.4rem;
-  max-width: 100vw;
 }
 
 .header {
@@ -85,7 +109,6 @@ textarea {
   position: relative;
   align-items: center;
   padding: 0.5rem;
-  width: 100vw;
 }
 
 .fa-bars {
@@ -247,6 +270,7 @@ textarea {
   display: flex;
   justify-content: center;
   align-items: center;
+  max-width: 100%;
 }
 
 /* Products */
@@ -324,8 +348,6 @@ textarea {
 @media screen and (max-width: 700px) {
   .products {
     padding: 0.7rem 0;
-
-    width: 100vw;
     border: 0;
   }
 
@@ -1398,7 +1420,6 @@ input.checked[type="radio"] {
   display: flex;
   align-items: center;
   justify-content: center;
-  z-index: 1;
   height: 8rem;
   width: 4rem;
   background-color: #00000040;
@@ -1437,7 +1458,6 @@ input.checked[type="radio"] {
 
 .left-chevron-wrap {
   border-radius: 0 0.5rem 0.5rem 0;
-  background-color: #ffffff70;
   clip-path: inset(-15px -15px -15px 0px);
   display: none;
 }
@@ -1498,26 +1518,6 @@ input.checked[type="radio"] {
 
   .show-more-submain {
     margin-top: 0.5rem;
-  }
-}
-
-/* Form Note */
-
-@media screen and (max-width: 700px) {
-  .lite-box-wrap {
-    width: 28rem;
-    height: 3.3rem;
-    left: calc((100vw - 28rem) / 2);
-    font-size: 1.3rem;
-  }
-
-  .faTimes-lite-box {
-    text-align: center;
-    padding: 1rem;
-    right: 0;
-    height: 4rem;
-    width: 3.5rem;
-    border-radius: 3rem;
   }
 }
 
@@ -1640,7 +1640,7 @@ input.checked[type="radio"] {
   left: 0;
   height: 100vh;
 
-  width: 100vw;
+  width: 100%;
   background-color: #0707075e;
 }
 
@@ -3979,7 +3979,7 @@ button[disabled]:hover {
 /* Navigation Bar */
 
 .navigation-bar {
-  width: 100vw;
+  width: 100%;
   display: flex;
   justify-content: center;
   position: relative;
@@ -4893,10 +4893,13 @@ button[disabled]:hover {
 
 .timer-bar {
   z-index: 999;
+  background-image: linear-gradient(to right, rgb(255, 210, 210), red);
 }
 
 /*//////////////////////////////////////////////*/
 
 .marker-transform {
   position: absolute;
+  pointer-events: none;
+  z-index: 1;
 }
