--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -459,21 +459,12 @@ textarea {
   height: 100%;
 }
 
-.product-details-wrap-1 {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 100%;
-  width: 100%;
-}
-
 .product-name {
   font-size: 1.4rem;
   font-weight: 500;
   color: #505050;
-  white-space: pre-wrap;
   text-align: center;
+  white-space: pre-wrap;
 }
 
 .product-name-wrapper:hover {
@@ -1346,6 +1337,22 @@ input.checked[type="radio"] {
   display: none;
 }
 
+.slider-overlay {
+  position: relative;
+  transition: all 0.5s !important;
+}
+
+.slider-container {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  transition: height 0.3s ease-in-out;
+}
+
 .bullets-cont {
   position: absolute;
   display: flex;
@@ -1468,31 +1475,6 @@ input.checked[type="radio"] {
 .right-chevron-wrap {
   border-radius: 0.5rem 0 0 0.5rem;
   clip-path: inset(-15px 0px -15px -15px);
-}
-
-.slider-overlay {
-  flex-direction: column;
-  position: relative;
-  transition: all 0.5s !important;
-}
-
-.flex-slides-wrapper {
-  /*height: 100%;
-  width: 100%;*/
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  transition: height 0.3s ease-in-out;
-  position: relative;
-  height: auto;
-  width: 100%;
-}
-
-.fixed-slides-wrapper {
-  position: relative;
-  width: 100%;
-  height: 100%;
 }
 
 @media screen and (max-width: 700px) {
